--- a/100_Numpy_random.ipynb
+++ b/100_Numpy_random.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "af8b6f2a",
    "metadata": {},
    "outputs": [],
@@ -45,16 +45,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f13ecfd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4. How to find the memory size of any array (★☆☆)\n"
+     ]
+    }
+   ],
    "source": [
     "pick()"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "interpreter": {
+   "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
