--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "a8453483",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "68182a76",
    "metadata": {},
    "outputs": [],
@@ -71,11 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2a9f5838",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'numpy.version' from '/home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages/numpy/version.py'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.version)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,11 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8a758bcf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.empty(10)\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,11 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1cc3cbc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.zeros(10)\n",
+    "\n",
+    "print(x)\n",
+    "print(x.nbytes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,11 +158,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "477e01f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zeros(shape, dtype=float, order='C', *, like=None)\n",
+      "\n",
+      "Return a new array of given shape and type, filled with zeros.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "shape : int or tuple of ints\n",
+      "    Shape of the new array, e.g., ``(2, 3)`` or ``2``.\n",
+      "dtype : data-type, optional\n",
+      "    The desired data-type for the array, e.g., `numpy.int8`.  Default is\n",
+      "    `numpy.float64`.\n",
+      "order : {'C', 'F'}, optional, default: 'C'\n",
+      "    Whether to store multi-dimensional data in row-major\n",
+      "    (C-style) or column-major (Fortran-style) order in\n",
+      "    memory.\n",
+      "like : array_like\n",
+      "    Reference object to allow the creation of arrays which are not\n",
+      "    NumPy arrays. If an array-like passed in as ``like`` supports\n",
+      "    the ``__array_function__`` protocol, the result will be defined\n",
+      "    by it. In this case, it ensures the creation of an array object\n",
+      "    compatible with that passed in via this argument.\n",
+      "\n",
+      "    .. versionadded:: 1.20.0\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "out : ndarray\n",
+      "    Array of zeros with the given shape, dtype, and order.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "zeros_like : Return an array of zeros with shape and type of input.\n",
+      "empty : Return a new uninitialized array.\n",
+      "ones : Return a new array setting values to one.\n",
+      "full : Return a new array of given shape filled with value.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> np.zeros(5)\n",
+      "array([ 0.,  0.,  0.,  0.,  0.])\n",
+      "\n",
+      ">>> np.zeros((5,), dtype=int)\n",
+      "array([0, 0, 0, 0, 0])\n",
+      "\n",
+      ">>> np.zeros((2, 1))\n",
+      "array([[ 0.],\n",
+      "       [ 0.]])\n",
+      "\n",
+      ">>> s = (2,2)\n",
+      ">>> np.zeros(s)\n",
+      "array([[ 0.,  0.],\n",
+      "       [ 0.,  0.]])\n",
+      "\n",
+      ">>> np.zeros((2,), dtype=[('x', 'i4'), ('y', 'i4')]) # custom dtype\n",
+      "array([(0, 0), (0, 0)],\n",
+      "      dtype=[('x', '<i4'), ('y', '<i4')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.info(np.zeros)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,11 +241,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4d9b5975",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.zeros(10)\n",
+    "x[3]=1\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,11 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5dbe1a08",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[47 14 10 24 45 17 39 38 25 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "x = np.random.randint(10, 50, 10)\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,11 +300,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3ed233e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14 23 44 25 42 22 31 39 28 21]\n",
+      "[21 28 39 31 22 42 25 44 23 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "x = np.random.randint(10, 50, 10)\n",
+    "print(x)\n",
+    "print(np.flip(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,11 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c97757ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 4]\n",
+      " [2 8 5]\n",
+      " [3 1 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "x = np.random.randint(0, 9, (3,3))\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,11 +362,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "327f7adb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([2, 3, 5]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([1,2,0,0,4,0])\n",
+    "y = np.where(x==0)\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,11 +391,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ba625832",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x= np.identity(3)\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,11 +423,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1cb3dddf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[5 5 4]\n",
+      "  [4 5 2]\n",
+      "  [8 7 6]]\n",
+      "\n",
+      " [[0 9 1]\n",
+      "  [5 2 0]\n",
+      "  [1 4 7]]\n",
+      "\n",
+      " [[7 9 1]\n",
+      "  [8 8 9]\n",
+      "  [5 0 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.random.randint(0,10,(3,3,3))\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,11 +463,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "911c9b93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.random.randint(0,10,(10,10))\n",
+    "\n",
+    "print(x.min(),x.max())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,11 +493,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "323eb38a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[57 28 31 93  2 75 24 13 25 18  4 32 61 80 15 52 54 98 32 71 94 61 56 82\n",
+      " 49 65 53 82 66 61]\n",
+      "[51.13333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.random.randint(0,100,30)\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "#np.info(x.mean)\n",
+    "print(x.mean(axis=0,keepdims=True))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,12 +526,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "e3a6807d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 0. 0. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.ones((7,7))\n",
+    "x[1:-1,1:-1]=0\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,11 +568,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "32ffee7b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 0 1]\n",
+      " [7 3 7]\n",
+      " [7 5 7]]\n",
+      "[[0 0 0 0 0]\n",
+      " [0 4 0 1 0]\n",
+      " [0 7 3 7 0]\n",
+      " [0 7 5 7 0]\n",
+      " [0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "x = np.random.randint(0,10,(3,3))\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "x = np.pad(x,1,mode='constant',constant_values=0)\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -319,11 +617,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ee7ff0f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 * np.nan # nan\n",
+    "np.nan == np.nan #false\n",
+    "np.inf > np.nan # false\n",
+    "np.nan - np.nan #nan \n",
+    "np.nan in set([np.nan]) #true\n",
+    "0.3 == 3 * 0.1 # false"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,11 +651,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "01d8e257",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0]\n",
+      " [1 0 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 0 3 0 0]\n",
+      " [0 0 0 4 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# np.info(np.diag)\n",
+    "\n",
+    "x = np.diag(np.arange(1,5),k=-1)\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,11 +687,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "841373cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.zeros((8,8))\n",
+    "\n",
+    "x[1::2,0::2] = 1\n",
+    "x[0::2,1::2] = 1\n",
+    "\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,11 +727,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "2c0d16f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "336\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 100 is out of bounds for axis 0 with size 6",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1003/3733279038.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 6"
+     ]
+    }
+   ],
+   "source": [
+    "4,5,5"
+   ]
   },
   {
    "cell_type": "markdown",
