--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -751,7 +751,7 @@
     }
    ],
    "source": [
-    "4,5,5"
+    "// m[5,5,4]"
    ]
   },
   {
@@ -812,11 +812,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "9fe729cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 4 0]\n",
+      " [4 4 3]\n",
+      " [3 0 0]\n",
+      " [1 8 6]\n",
+      " [2 0 6]]\n",
+      "[[1 6]\n",
+      " [9 5]\n",
+      " [3 9]]\n",
+      "[[ 40  44]\n",
+      " [ 49  71]\n",
+      " [  3  18]\n",
+      " [ 91 100]\n",
+      " [ 20  66]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x1 = np.random.randint(0,10,(5,3))\n",
+    "x2 = np.random.randint(0,10,(3,2))\n",
+    "\n",
+    "x = np.dot(x1,x2)\n",
+    "\n",
+    "print(x1)\n",
+    "print(x2)\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -828,11 +859,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "51c90f2d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 0 5 5 6 3 4 1 5 8]\n",
+      "[ 6  0 -5 -5 -6 -3 -4 -1  5  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v = np.random.randint(0,10,10)\n",
+    "\n",
+    "print(v)\n",
+    "v[2:8]=-v[2:8]\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -851,11 +899,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "b62e9d1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "10 == np.sum(range(5),-1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -896,11 +958,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "820dc7a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.array([np.nan]).astype(int).astype(float)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -916,7 +992,10 @@
    "id": "a3e05c29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x= x//1\n",
+    "x=x.astype(int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -928,11 +1007,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "6801c73d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "  \n",
+    "  \n",
+    "ar1 = np.array([0, 1, 2, 3, 4])\n",
+    "ar2 = [1, 3, 4]\n",
+    "  \n",
+    "# Common values between two arrays\n",
+    "print(np.intersect1d(ar1, ar2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -944,11 +1040,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "befc60d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.seterr(all=\"ignore\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -963,11 +1072,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "c70cbabe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.sqrt(-1) == np.emath.sqrt(-1)\n",
+    "\n",
+    "print(np.emath.sqrt(-1))"
+   ]
   },
   {
    "cell_type": "markdown",
