--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -1040,23 +1040,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "id": "befc60d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+       "{'divide': 'warn', 'over': 'warn', 'under': 'warn', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.seterr(all=\"ignore\")"
+    "import numpy as np\n",
+    "#np.seterr(all=\"ignore\")\n",
+    "np.seterr(all=\"warn\")"
    ]
   },
   {
@@ -1100,11 +1102,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8ba1badb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-12-28\n",
+      "1 days\n",
+      "2021-12-27\n",
+      "2021-12-29\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "today = np.datetime64('today', 'D')\n",
+    "\n",
+    "delta = np.timedelta64(1,'D')\n",
+    "\n",
+    "print(today)\n",
+    "# print(delta)\n",
+    "yesterday = today - delta\n",
+    "print(yesterday)\n",
+    "print(today + delta)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1116,11 +1141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eb8ebe45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2016-06-01' '2016-06-02' '2016-06-03' '2016-06-04' '2016-06-05'\n",
+      " '2016-06-06' '2016-06-07' '2016-06-08' '2016-06-09' '2016-06-10'\n",
+      " '2016-06-11' '2016-06-12' '2016-06-13' '2016-06-14' '2016-06-15'\n",
+      " '2016-06-16' '2016-06-17' '2016-06-18' '2016-06-19' '2016-06-20'\n",
+      " '2016-06-21' '2016-06-22' '2016-06-23' '2016-06-24' '2016-06-25'\n",
+      " '2016-06-26' '2016-06-27' '2016-06-28' '2016-06-29' '2016-06-30']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange('2016-06','2016-07',dtype='datetime64[D]')\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1132,11 +1175,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f06ff615",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 1 6]\n",
+      " [9 4 3]\n",
+      " [0 9 8]]\n",
+      "----------\n",
+      "[[1 5 0]\n",
+      " [0 3 3]\n",
+      " [1 1 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.random.randint(0,10,(3,3))\n",
+    "b = np.random.randint(0,10,(3,3))\n",
+    "\n",
+    "print(a)\n",
+    "print('----------')\n",
+    "print(b)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
