--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f06ff615",
    "metadata": {},
    "outputs": [
@@ -1183,13 +1183,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5 1 6]\n",
-      " [9 4 3]\n",
-      " [0 9 8]]\n",
+      "[[2 3 1]\n",
+      " [8 9 9]\n",
+      " [1 8 3]]\n",
       "----------\n",
-      "[[1 5 0]\n",
-      " [0 3 3]\n",
-      " [1 1 4]]\n"
+      "[[8 3 9]\n",
+      " [7 8 7]\n",
+      " [4 8 4]]\n",
+      "----------\n",
+      "[[-10.   -9.   -5. ]\n",
+      " [-60.  -76.5 -72. ]\n",
+      " [ -2.5 -64.  -10.5]]\n"
      ]
     }
    ],
@@ -1202,7 +1206,9 @@
     "print(a)\n",
     "print('----------')\n",
     "print(b)\n",
-    "\n"
+    "print('----------')\n",
+    "x = (a+b)*(-a/2)\n",
+    "print(x)"
    ]
   },
   {
@@ -1215,11 +1221,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "34b4fa08",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.17711136 7.13905478 3.57068661 1.27540938 7.93419022]\n",
+      "[0. 7. 3. 1. 7.]\n",
+      "[0 7 3 1 7]\n",
+      "[0. 7. 3. 1. 7.]\n",
+      "[0. 7. 3. 1. 7.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "v = np.random.random(5)*10\n",
+    "print(v)\n",
+    "\n",
+    "v1 = v // 1\n",
+    "v2 = v.astype(int)\n",
+    "v3 = np.modf(v)[1]\n",
+    "v4 = divmod(v,1)[0]\n",
+    "\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "print(v3)\n",
+    "print(v4)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
