--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -1764,11 +1764,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "3326a686",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1]\n",
+      "------\n",
+      "[0 1]\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v1 = np.random.randint(0,2,2)\n",
+    "v2 = np.random.randint(0,2,2)\n",
+    "\n",
+    "print(v1)\n",
+    "print('------')\n",
+    "print(v2)\n",
+    "\n",
+    "print(np.array_equal(v1,v2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1780,11 +1802,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "d5cc9dbe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is immutable\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.ones(10)\n",
+    "\n",
+    "a.flags.writeable = False\n",
+    "\n",
+    "try:\n",
+    "    a[0] = 0\n",
+    "except:\n",
+    "    print('a is immutable')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1796,11 +1837,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "58be72bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 6]\n",
+      " [3 7]\n",
+      " [3 6]\n",
+      " [7 0]\n",
+      " [1 7]\n",
+      " [4 1]\n",
+      " [7 2]\n",
+      " [9 9]\n",
+      " [7 2]\n",
+      " [3 0]]\n",
+      "-----------------------------\n",
+      "[[ 9.21954446  0.86217005]\n",
+      " [ 7.61577311  0.40489179]\n",
+      " [ 6.70820393  0.46364761]\n",
+      " [ 7.          1.57079633]\n",
+      " [ 7.07106781  0.14189705]\n",
+      " [ 4.12310563  1.32581766]\n",
+      " [ 7.28010989  1.29249667]\n",
+      " [12.72792206  0.78539816]\n",
+      " [ 7.28010989  1.29249667]\n",
+      " [ 3.          1.57079633]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "m = np.random.randint(0, 10, (10, 2))\n",
+    "\n",
+    "\n",
+    "print(m)\n",
+    "print('-----------------------------')\n",
+    "m = np.hsplit(m, 2)\n",
+    "x = m[0]\n",
+    "y = m[1]\n",
+    "\n",
+    "rho = np.sqrt(x*x+y*y)\n",
+    "# print(rho)\n",
+    "\n",
+    "phi = np.arctan2(x,y)\n",
+    "# print(phi)\n",
+    "\n",
+    "z= np.column_stack((rho,phi))\n",
+    "\n",
+    "print(z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1812,11 +1901,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "f79e79a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 8 6 8 3 1 8 8 1 2]\n",
+      "8\n",
+      "[6 0 6 0 3 1 0 0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v = np.random.randint(0,9,10)\n",
+    "max = v.max()\n",
+    "\n",
+    "print(v)\n",
+    "print(max)\n",
+    "\n",
+    "v[np.where(v==max)]=0\n",
+    "\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
