--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "68182a76",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2a9f5838",
    "metadata": {},
    "outputs": [
@@ -1955,11 +1955,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8fac7d28",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 3 1 8 8]\n",
+      "-----------\n",
+      "[7 6 0 8 0]\n",
+      "[-0.5        -0.33333333  0.                 inf  0.        ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1035/2313551742.py:10: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  c = 1 / (v1-v2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v1 = np.random.randint(0,9,5)\n",
+    "v2 = np.random.randint(0,9,5)\n",
+    "\n",
+    "print(v1)\n",
+    "print('-----------')\n",
+    "print(v2)\n",
+    "\n",
+    "c = 1 / (v1-v2)\n",
+    "c[v2 == 0] = 0\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1971,11 +2003,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b721f7ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-128\n",
+      "127\n",
+      "-2147483648\n",
+      "2147483647\n",
+      "-9223372036854775808\n",
+      "9223372036854775807\n",
+      "-3.4028235e+38\n",
+      "3.4028235e+38\n",
+      "1.1920929e-07\n",
+      "-1.7976931348623157e+308\n",
+      "1.7976931348623157e+308\n",
+      "2.220446049250313e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dtype in [np.int8, np.int32, np.int64]:\n",
+    "\n",
+    "    print(np.iinfo(dtype).min)\n",
+    "\n",
+    "    print(np.iinfo(dtype).max)\n",
+    "\n",
+    "for dtype in [np.float32, np.float64]:\n",
+    "\n",
+    "    print(np.finfo(dtype).min)\n",
+    "\n",
+    "    print(np.finfo(dtype).max)\n",
+    "\n",
+    "    print(np.finfo(dtype).eps)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1987,11 +2052,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c81f1456",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 8 8 6 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v = np.random.randint(0,9,5)\n",
+    "\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2003,11 +2082,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "73dd91cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 5 9 0 4]\n",
+      "5.114431482635734\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v1 = np.random.randint(0,10,5)\n",
+    "print(v1)\n",
+    "\n",
+    "x = np.random.uniform(0, 10)\n",
+    "print(x)\n",
+    "\n",
+    "print(np.abs(v1-x).argmin())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2019,11 +2118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "fb8017ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(5.8609667, 9.512385 , 184, 216, 230)\n",
+      "  (2.1687806, 8.706774 , 146,  35, 107)]\n",
+      " [(9.632412 , 8.222535 , 224, 134, 173)\n",
+      "  (2.7740269, 0.8557869,  22, 157, 186)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "mytype = [('x',np.float32),('y',np.float32),('r',np.int32),('g',np.int32),('b',np.int32)]\n",
+    "\n",
+    "arr = np.zeros((2,2),dtype=mytype)\n",
+    "\n",
+    "arr['x'] = np.random.uniform(0,10,(2,2))\n",
+    "arr['y'] = np.random.uniform(0,10,(2,2))\n",
+    "\n",
+    "arr['r'] = np.random.randint(0,255,(2,2))\n",
+    "arr['g'] = np.random.randint(0,255,(2,2))\n",
+    "arr['b'] = np.random.randint(0,255,(2,2))\n",
+    "\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2039,7 +2165,9 @@
    "id": "4b482822",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "markdown",
